Basic chat working, still need to do formatting and messages on other events, as well as user-specified name and batch chat receival on reconnect(?)

--- a/ios-chat/ios-chat/Base.lproj/Main.storyboard
+++ b/ios-chat/ios-chat/Base.lproj/Main.storyboard
@@ -16,15 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y4I-yW-sSe">
-                                <rect key="frame" x="15" y="92" width="383" height="411"/>
-                            </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Opb-mn-JrQ">
-                                <rect key="frame" x="-50" y="85" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Chat Log:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiD-tf-s7D">
                                 <rect key="frame" x="20" y="45" width="180" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -43,11 +34,14 @@
                                     <action selector="sendMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TK5-FJ-Vyk"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="dl9-rA-RjH">
+                                <rect key="frame" x="20" y="102" width="367" height="395"/>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="chatView" destination="y4I-yW-sSe" id="oxO-bu-iwD"/>
+                        <outlet property="chatStack" destination="dl9-rA-RjH" id="tiz-TC-pem"/>
                         <outlet property="messageInput" destination="aax-N2-5X5" id="Y6m-KR-gMi"/>
                         <outlet property="sendMessageButton" destination="Ibx-Lr-hYU" id="7mD-ec-VaB"/>
                     </connections>
